--- a/staticfiles/airlines/header.css
+++ b/staticfiles/airlines/header.css
@@ -11,7 +11,7 @@ body > header {
   background-color: #7d444a;
   margin: 0;
   padding-top: 3vw;
-  padding-bottom: 3vw;
+  padding-bottom: 1vw;
 }
 
 body > header i {
@@ -22,11 +22,11 @@ body > header i {
 body > nav {
   font-family: 'PT Sans', sans-serif;
   color: white;
-  background-color: rgba(125, 68, 74, 0.89);
+  background-color: rgb(125, 68, 74);
   margin-top: 0;
   margin-left: 0;
   padding-top: 0.5vw;
-  padding-bottom: 0.5vw;
+  padding-bottom: 2.5vw;
 }
 
 body > nav ul {
