--- a/staticfiles/airlines/navigation.css
+++ b/staticfiles/airlines/navigation.css
@@ -22,6 +22,16 @@ main > nav ul li.active {
   background-color: #975259;
 }
 
+main > nav ul li.backButton {
+  padding: 0;
+  margin: 0;
+}
+
+main > nav ul li.backButton a {
+  padding-left: 1vw;
+  padding-right: 1vw;
+}
+
 main > nav ul li.active a {
   color: white;
 }
@@ -64,4 +74,29 @@ main > .pages ul li a {
   padding-left: 5px;
   padding-right: 5px;
   display: block;
+}
+
+button {
+  font-family: 'PT Sans', sans-serif;
+  font-weight: bold;
+  font-size: 110%;
+  background-color: #4c2b2e;
+  color: white;
+  z-index: 999999999999;
+  opacity: 1;
+  border: none;
+  padding-left: 5vw;
+  padding-right: 5vw;
+  padding-top: 0.5vw;
+  padding-bottom: 0.5vw;
+  border: 2px solid transparent;
+  cursor: pointer;
+  margin-left: 1vw;
+  margin-top: 1vw;
+}
+
+button:hover {
+  background-color: white;
+  color: #4c2b2e;
+  border: 2px solid #4c2b2e;
 }
