--- a/airlines/templates/index.html
+++ b/airlines/templates/index.html
@@ -15,12 +15,14 @@
         <script src="{% static 'airlines/index.js' %}"></script>
         <script src="{% static 'airlines/navigation.js' %}"></script>
         <script src="{% static 'airlines/header.js' %}"></script>
+        <script src="{% static 'airlines/messages.js' %}"></script>
         <link rel="stylesheet" href="{% static 'airlines/vendor/magnific-popup.css' %}">
         <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.12/css/all.css" integrity="sha384-G0fIWCsCzJIMAVNQPfjH08cyYaUtMwjJwqiRKxxE/rx96Uroj1BtIQ6MLJuheaO9" crossorigin="anonymous">
         <link rel="stylesheet" href="{% static 'airlines/header.css' %}">
         <link rel="stylesheet" href="{% static 'airlines/navigation.css' %}">
         <link rel="stylesheet" href="{% static 'airlines/tables.css' %}">
         <link rel="stylesheet" href="{% static 'airlines/dialogs.css' %}">
+        <link rel="stylesheet" href="{% static 'airlines/messages.css' %}">
     </head>
     <body>
     
@@ -31,6 +33,9 @@
           {% include "navigation/navigation.html" %}
         </nav>
       
+        {% if content == 'add-user-form' %}
+          {% include "content/add-user-form.html" %}
+        {% endif %}
         {% if content == 'flight-edit-not-found' %}
           {% include "content/flight-edit-not-found.html" %}
         {% endif %}
@@ -49,6 +54,8 @@
       </main>
       
       {% include "navigation/footer.html" %}
+      
+      {% include "navigation/messages.html" %}
       
     </body>
 </html>
