--- a/staticfiles/airlines/header.css
+++ b/staticfiles/airlines/header.css
@@ -3,6 +3,39 @@ body {
   padding: 0;
 }
 
+a {
+  text-decoration: none;
+}
+
+form input, select {
+  font-family: 'PT Sans', sans-serif;
+  display: block;
+}
+
+form label {
+  font-family: 'PT Sans', sans-serif;
+}
+
+form input[type="submit"] {
+  background-color: #4c2b2e;
+  color: white;
+  font-weight: bold;
+  padding: 1vw;
+  border: none;
+  padding-left: 20vw;
+  padding-right: 20vw;
+  margin-left: 25vw;
+  margin-top: 2vw;
+  border: 2px solid transparent;
+  cursor: pointer;
+}
+
+form input[type="submit"]:hover {
+  background-color: white;
+  color: #4c2b2e;
+  border: 2px solid #4c2b2e;
+}
+
 body > header {
   font-family: 'PT Sans', sans-serif;
   font-size: 200%;
