--- a/staticfiles/airlines/header.css
+++ b/staticfiles/airlines/header.css
@@ -73,7 +73,7 @@ body > nav ul {
 
 body > nav ul li {
   font-size: 100%;
-  background-color: #7d444aed;
+  background-color: rgba(125,68,74,0.929);
   padding: 0.5vw;
   display: inline;
   cursor: pointer;
