--- a/airlines/templates/content/flights.html
+++ b/airlines/templates/content/flights.html
@@ -1,3 +1,12 @@
+
+<form action="{{ filter_action_url }}" method="post">
+  {% csrf_token %}
+  <table class="small">
+    {{ filter_form.as_table }}
+  </table>
+  <input class="small" type="submit" value="Apply filtering" />
+</form>
+
 <table>
   <thead>
     <tr>
