--- a/airlines/templates/data-generator.html
+++ b/airlines/templates/data-generator.html
@@ -8,6 +8,7 @@
         <link href="https://fonts.googleapis.com/css?family=PT+Sans" rel="stylesheet" type="text/css"/>
         <link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet" type="text/css"/>
         <title>Test data generator</title>
+        <link rel="shortcut icon" href="{% static 'airlines/favicon.ico' %}" />
         <script src="{% static 'airlines/vendor/jquery-3.3.1.min.js' %}"></script>
         <script src="{% static 'airlines/vendor/magnific-popup.js' %}"></script>
         <script src="{% static 'airlines/vendor/moment.js' %}"></script>
