--- a/airlines/templates/data-generator.html
+++ b/airlines/templates/data-generator.html
@@ -26,7 +26,7 @@
     <body class="dialogContent">
       <main>
         {% if content == 'data-generator-answer' %}
-          <header>{{ content_message }}</header>
+          <div class="headmessage">{{ content_message }}</div>
         {% endif %}
         
         <form action="data-generator" method="post">
