--- a/airlines/templates/navigation/header.html
+++ b/airlines/templates/navigation/header.html
@@ -2,6 +2,7 @@
   <i class="fas fa-plane"></i> Airlines manager
   <nav>
     {% if user_auth %}
+      <figure class="real-time-status"></figure>
       Logged as <span class="username">{{ user_auth.username }}</span>
       <a href="logout">
         <button class="small">
