--- a/staticfiles/airlines/header.css
+++ b/staticfiles/airlines/header.css
@@ -4,6 +4,13 @@ body {
   /*filter: hue-rotate(191deg) brightness(98%) contrast(98%) saturate(74%);*/
 }
 
+div.headmessage {
+  font-family: 'PT Sans', sans-serif;
+  color: black;
+  font-weight: bold;
+  margin-left: 2vw;
+}
+
 a {
   text-decoration: none;
 }
