Provide REST API and basic crew model

--- a/airlines/templates/content/flight-edit.html
+++ b/airlines/templates/content/flight-edit.html
@@ -23,6 +23,17 @@
       <td>Departure / Arrival</td>
       <td>{{ flight.start }} / {{ flight.end }}</td>
     </tr>
+    
+    <tr>
+      <td>Flight crew</td>
+      <td>
+        {% if flight.crew %}
+          <code>{{ flight.crew.crew_id }}</code>
+        {% else %}
+          No crew
+        {% endif %}
+      </td>
+    </tr>
      
     <tr>
       <td>Bought tickets</td>
