--- a/staticfiles/airlines/crews-panel.css
+++ b/staticfiles/airlines/crews-panel.css
@@ -2,6 +2,12 @@
   font-family: 'PT Sans', sans-serif;
 }
 
+.content-expanded .details > ul {
+  list-style: none;
+  border-left: 2px solid #975259;
+  padding-left: 20px;
+}
+
 .content-expanded .input-suggestions {
   list-style: none;
   background-color: #975259;
