Better navigation for crews :rocket:

--- a/airlines/templates/content/crews-panel.html
+++ b/airlines/templates/content/crews-panel.html
@@ -1,3 +1,17 @@
+<nav class="subsections">
+  <ul>
+    <li>
+      <a href="crews">
+        List
+      </a>
+    </li>
+    <li class="active">
+      <a href="crews-panel">
+        Assign to flights
+      </a>
+    </li>
+  </ul>
+</nav>
 <table class="crews-table">
   <thead>
     <tr>
