--- a/airlines/templates/navigation/navigation.html
+++ b/airlines/templates/navigation/navigation.html
@@ -35,7 +35,7 @@
     </li>
   {% endif %}
   
-  {% if content == 'crews' %}
+  {% if content == 'crews' or content == 'crews-panel' %}
     <li class="active">
       <a href="/airlines/crews">Crews</a>
     </li>
