--- a/airlines/templates/navigation/navigation.html
+++ b/airlines/templates/navigation/navigation.html
@@ -37,11 +37,11 @@
   
   {% if content == 'crews' or content == 'crews-panel' %}
     <li class="active">
-      <a href="/airlines/crews">Crews</a>
+      <a href="/airlines/crews-panel">Crews</a>
     </li>
   {% else %}
     <li>
-      <a href="/airlines/crews">Crews</a>
+      <a href="/airlines/crews-panel">Crews</a>
     </li>
   {% endif %}
   
