Fixing UI bugs and code cleanup

--- a/airlines/templates/content/add-user-form.html
+++ b/airlines/templates/content/add-user-form.html
@@ -1,8 +1,7 @@
-
 <form action="{{ formActionURL }}" method="post">
-  {% csrf_token %}
-  <table>
-    {{ form.as_table }}
-  </table>
-  <input type="submit" value="Submit" />
+    {% csrf_token %}
+    <table>
+        {{ form.as_table }}
+    </table>
+    <input type="submit" class="submitAddUser" value="Submit"/>
 </form>
