--- a/airlines/templates/content/crews.html
+++ b/airlines/templates/content/crews.html
@@ -1,129 +1,131 @@
 <nav class="subsections">
-  <ul>
-    <li class="active">
-      <a href="crews">
-        List
-      </a>
-    </li>
-    <li>
-      <a href="crews-panel">
-        Assign to flights
-      </a>
-    </li>
-  </ul>
+    <ul>
+        <li class="active">
+            <a href="crews">
+                List
+            </a>
+        </li>
+        <li>
+            <a href="crews-panel">
+                Assign to flights
+            </a>
+        </li>
+    </ul>
 </nav>
 <table>
-  <thead>
+    <thead>
     <tr>
-       <th data-view="plane-plate">
-        <a 
-          class="{{ sort_links.crew_id.mode }}"
-          href="{{ sort_links.crew_id.link }}"
-        >
-          Crew ID
-        </a>
-      </th>
-      <th>
-        <a 
-          class="{{ sort_links.number_of_workers.mode }}"
-          href="{{ sort_links.number_of_workers.link }}"
-        >
-          Assigned flights
-        </a>
-      </th>
-      <th>
-        <a 
-          class="{{ sort_links.number_of_workers.mode }}"
-          href="{{ sort_links.number_of_workers.link }}"
-        >
-          Members count
-        </a>
-      </th>
+        <th data-view="plane-plate">
+            <a
+                    class="{{ sort_links.crew_id.mode }}"
+                    href="{{ sort_links.crew_id.link }}"
+            >
+                Crew ID
+            </a>
+        </th>
+        <th>
+            <a
+                    class="{{ sort_links.number_of_workers.mode }}"
+                    href="{{ sort_links.number_of_workers.link }}"
+            >
+                Assigned flights
+            </a>
+        </th>
+        <th>
+            <a
+                    class="{{ sort_links.number_of_workers.mode }}"
+                    href="{{ sort_links.number_of_workers.link }}"
+            >
+                Members count
+            </a>
+        </th>
     </tr>
-  </thead>
-  <tbody>
+    </thead>
+    <tbody>
 
     {% if page_data %}
-      {% for crew in page_data %}
-        <tr>
-            <td>{{ crew.crew_id }}</td>
-            {% if crew.flight_set.all.count %}
-              <td>
-                <ul class='flight-details'>
-                  {% for flight in crew.flight_set.all %}
-                    <li>
-                      <code>
-                        {{ flight.plane.reg_id }}
-                      </code>
-                      <b>{{ flight.src }}</b>
-                      &#x1f852;
-                      <b>{{ flight.dest }}</b>
-                      ({{ flight.start|date:"H:m" }})
-                    </li>
-                  {% endfor %}
-                </ul>
-              </td>
-            {% else %}
-              <td>No flight</td>
-            {% endif %}
-            <td>{{ crew.number_of_workers }}</td>
-        </tr>
-      {% endfor %}
-    {% else %}
-      <tr>
-        <td colspan="3">
-          <p class='flight-details-na'>No crews are available.</p>
+    {% for crew in page_data %}
+    <tr>
+        <td>{{ crew.crew_id }}</td>
+        {% if crew.flight_set.all.count %}
+        <td>
+            <!--<ul class='flight-details'>
+              {% for flight in crew.flight_set.all %}
+                <li>
+                  <code>
+                    {{ flight.plane.reg_id }}
+                  </code>
+                  <b>{{ flight.src }}</b>
+                  &#x1f852;
+                  <b>{{ flight.dest }}</b>
+                  ({{ flight.start|date:"H:m" }})
+                </li>
+              {% endfor %}
+            </ul>-->
+            {{ crew.flight_set.all.count }}
+            flights
         </td>
-      </tr>
+        {% else %}
+        <td>No flight</td>
+        {% endif %}
+        <td>{{ crew.number_of_workers }}</td>
+    </tr>
+    {% endfor %}
+    {% else %}
+    <tr>
+        <td colspan="3">
+            <p class='flight-details-na'>No crews are available.</p>
+        </td>
+    </tr>
     {% endif %}
 
-  </tbody>
+    </tbody>
 </table>
 
 <nav class="pages">
-  <ul>
-    {% if first_page %}
-      <li>
-        <a href="{{ first_page }}">
-          &lt;&lt;
-        </a>
-      </li>
-    {% endif %}
-    {% if previous_page %}
-      <li>
-        <a href="{{ previous_page }}">
-          &lt;
-        </a>
-      </li>
-    {% endif %}
-    {% for page in pages %}
-      {% if page.no == current_page %}
-        <li class="active">
-          <a href="{{ page.link }}">
-            {{ page.no }}
-          </a>
-        </li>
-      {% else %}
+    <ul>
+        {% if first_page %}
         <li>
-          <a href="{{ page.link }}">
-            {{ page.no }}
-          </a>
+            <a href="{{ first_page }}">
+                &lt;&lt;
+            </a>
         </li>
-      {% endif %}
-    {% endfor %}
-    {% if next_page %}
-      <li>
-        <a href="{{ next_page }}">
-          &gt;
-        </a>
-      </li>
-    {% endif %}
-    {% if last_page %}
-      <li>
-        <a href="{{ last_page }}">
-          &gt;&gt;
-        </a>
-      </li>
-    {% endif %}
-  </ul>
+        {% endif %}
+        {% if previous_page %}
+        <li>
+            <a href="{{ previous_page }}">
+                &lt;
+            </a>
+        </li>
+        {% endif %}
+        {% for page in pages %}
+        {% if page.no == current_page %}
+        <li class="active">
+            <a href="{{ page.link }}">
+                {{ page.no }}
+            </a>
+        </li>
+        {% else %}
+        <li>
+            <a href="{{ page.link }}">
+                {{ page.no }}
+            </a>
+        </li>
+        {% endif %}
+        {% endfor %}
+        {% if next_page %}
+        <li>
+            <a href="{{ next_page }}">
+                &gt;
+            </a>
+        </li>
+        {% endif %}
+        {% if last_page %}
+        <li>
+            <a href="{{ last_page }}">
+                &gt;&gt;
+            </a>
+        </li>
+        {% endif %}
+    </ul>
 </nav>
