--- a/airlines/templates/registration/login.html
+++ b/airlines/templates/registration/login.html
@@ -2,55 +2,56 @@
 
 <!DOCTYPE html>
 <html>
-    <head>
-        <meta charset="utf-8"/>
-        <meta content="width=device-width, initial-scale=1" name="viewport"/>
-        <link href="https://fonts.googleapis.com/css?family=PT+Sans" rel="stylesheet" type="text/css"/>
-        <link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet" type="text/css"/>
-        <title>Airlines manager</title>
-        <link rel="shortcut icon" href="{% static 'airlines/favicon.ico' %}" />
-        <script src="{% static 'airlines/vendor/jquery-3.3.1.min.js' %}"></script>
-        <script src="{% static 'airlines/vendor/magnific-popup.js' %}"></script>
-        <script src="{% static 'airlines/vendor/moment.js' %}"></script>
-        <script src="{% static 'airlines/sortable-table.js' %}"></script>
-        <script src="{% static 'airlines/index.js' %}"></script>
-        <script src="{% static 'airlines/navigation.js' %}"></script>
-        <script src="{% static 'airlines/header.js' %}"></script>
-        <script src="{% static 'airlines/messages.js' %}"></script>
-        <link rel="stylesheet" href="{% static 'airlines/vendor/magnific-popup.css' %}">
-        <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.12/css/all.css" integrity="sha384-G0fIWCsCzJIMAVNQPfjH08cyYaUtMwjJwqiRKxxE/rx96Uroj1BtIQ6MLJuheaO9" crossorigin="anonymous">
-        <link rel="stylesheet" href="{% static 'airlines/header.css' %}">
-        <link rel="stylesheet" href="{% static 'airlines/navigation.css' %}">
-        <link rel="stylesheet" href="{% static 'airlines/tables.css' %}">
-        <link rel="stylesheet" href="{% static 'airlines/dialogs.css' %}">
-        <link rel="stylesheet" href="{% static 'airlines/messages.css' %}">
-        <link rel="stylesheet" href="{% static 'airlines/login.css' %}">
-        <link rel="stylesheet" href="{% static 'airlines/forms.css' %}">
-    </head>
-    <body>
-    
-      {% include "navigation/header.html" %}
-        
-      <main>
-        <nav>
-          {% include "navigation/navigation.html" %}
-        </nav>
-      
-        {% block content %}
-          <h1>
-            Enter your login data
-          </h1>
-          <form class="login" method="post">
-            {% csrf_token %}
-            {{ form.as_table }}
-            <button type="submit">Login</button>
-          </form>
-        {% endblock %}
-      </main>
-      
-      {% include "navigation/footer.html" %}
-      
-      {% include "navigation/messages.html" %}
-      
-    </body>
+<head>
+    <meta charset="utf-8"/>
+    <meta content="width=device-width, initial-scale=1" name="viewport"/>
+    <link href="https://fonts.googleapis.com/css?family=PT+Sans" rel="stylesheet" type="text/css"/>
+    <link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet" type="text/css"/>
+    <title>Airlines manager</title>
+    <link rel="shortcut icon" href="{% static 'airlines/favicon.ico' %}"/>
+    <script src="{% static 'airlines/vendor/jquery-3.3.1.min.js' %}"></script>
+    <script src="{% static 'airlines/vendor/magnific-popup.js' %}"></script>
+    <script src="{% static 'airlines/vendor/moment.js' %}"></script>
+    <script src="{% static 'airlines/sortable-table.js' %}"></script>
+    <script src="{% static 'airlines/index.js' %}"></script>
+    <script src="{% static 'airlines/navigation.js' %}"></script>
+    <script src="{% static 'airlines/header.js' %}"></script>
+    <script src="{% static 'airlines/messages.js' %}"></script>
+    <link rel="stylesheet" href="{% static 'airlines/vendor/magnific-popup.css' %}">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.12/css/all.css"
+          integrity="sha384-G0fIWCsCzJIMAVNQPfjH08cyYaUtMwjJwqiRKxxE/rx96Uroj1BtIQ6MLJuheaO9" crossorigin="anonymous">
+    <link rel="stylesheet" href="{% static 'airlines/header.css' %}">
+    <link rel="stylesheet" href="{% static 'airlines/navigation.css' %}">
+    <link rel="stylesheet" href="{% static 'airlines/tables.css' %}">
+    <link rel="stylesheet" href="{% static 'airlines/dialogs.css' %}">
+    <link rel="stylesheet" href="{% static 'airlines/messages.css' %}">
+    <link rel="stylesheet" href="{% static 'airlines/login.css' %}">
+    <link rel="stylesheet" href="{% static 'airlines/forms.css' %}">
+</head>
+<body>
+
+{% include "navigation/header.html" %}
+
+<main>
+    <nav>
+        {% include "navigation/navigation.html" %}
+    </nav>
+
+    {% block content %}
+    <h1>
+        Enter your login data
+    </h1>
+    <form class="login" method="post">
+        {% csrf_token %}
+        {{ form.as_table }}
+        <button class="submitLoginButton" type="submit">Login</button>
+    </form>
+    {% endblock %}
+</main>
+
+{% include "navigation/footer.html" %}
+
+{% include "navigation/messages.html" %}
+
+</body>
 </html>
