--- a/staticfiles/airlines/messages.css
+++ b/staticfiles/airlines/messages.css
@@ -1,26 +1,26 @@
 .messagesContainer {
-  position: fixed;
-  bottom: 0;
-  left: 0;
-  width: 100vw;
-  pointer-events: none;
-  z-index: 99999999999;
+    position: fixed;
+    bottom: 0;
+    left: 0;
+    width: 100vw;
+    pointer-events: none;
+    z-index: 99999999999;
 }
 
 .messagesContainer .message {
-  font-family: 'PT Sans', sans-serif;
-  color: white;
-  background-color: rgba(7,97,0,1);
-  padding: 1vw;
-  margin-left: 30vw;
-  font-weight: bold;
-  cursor: pointer;
-  overflow: hidden;
-  width: 200vw;
-  pointer-events: bounding-box;
+    font-family: 'PT Sans', sans-serif;
+    color: white;
+    background-color: rgba(7, 97, 0, 1);
+    padding: 1vw;
+    margin-left: 30vw;
+    font-weight: bold;
+    cursor: pointer;
+    overflow: hidden;
+    width: 200vw;
+    pointer-events: bounding-box;
 }
 
 .messagesContainer .message.error {
-  background-color: rgba(142,0,0,0.76);
-  color: white;
+    background-color: rgba(142, 0, 0, 0.76);
+    color: white;
 }
